[package]
name = "metaplex-substream"
version = "0.1.1"
edition = "2021"

[lib]
name = "metaplex_substream"
crate-type = ["lib", "cdylib"]

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
#substreams-solana-utils = { git = "https://github.com/0xpapercut/substreams-solana-utils", branch = "main" }
#spl-token-substream = { git = "https://github.com/0xpapercut/spl-token-substream", branch = "main" }
substreams-solana-utils = { path = "../substreams-solana-utils" }
#spl-token-substream = { path = "../spl-token-substream" }
prost = "0.11"
bs58 = "0.5.0"
borsh = { version = "1.5.1", features = ["derive"] }
lazy_static = "1.5.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.63"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
