[package]
name = "mpl-token-metadata-substream"
version.workspace = true
edition.workspace = true

[lib]
name = "mpl_token_metadata_substream"
crate-type = ["lib", "cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-utils = { workspace = true }
prost = { workspace = true }
bs58 = { workspace = true }
borsh = { workspace = true }
lazy_static = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
