[package]
name = "raydium-amm-substream"
version = "0.1.1"
edition = "2021"

[lib]
name = "raydium_amm_substream"
crate-type = ["lib", "cdylib"]

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-utils = { git = "https://github.com/0xpapercut/substreams-solana-utils", branch = "main" }
spl-token-substream = { path = "../spl_token"}
prost = "0.11"
bs58 = "0.5.0"
bincode = "1.3.3"
base64 = "0.22.1"
serde = { version = "1.0.208", features = ["derive"] }
arrayref = "0.3.8"
safe-transmute = "0.11.3"
bytemuck = "1.17.0"
lazy_static = "1.5.0"
regex = "1.10.6"
anyhow = "1.0.89"
