[package]
name = "spl-token-substream"
version = "0.1.1"
edition = "2021"

[lib]
name = "spl_token_substream"
crate-type = ["lib", "cdylib"]

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
prost = "0.11"
bs58 = "0.5.0"
substreams-solana-utils = { path = "../utils" }
anyhow = "1.0.86"
thiserror = "1.0.63"
