[package]
name = "spl-token-substream"
version = "0.1.2"
edition = "2021"

[lib]
name = "spl_token_substream"
crate-type = ["lib", "cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-utils = { workspace = true }
prost = { workspace = true }
bs58 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
