[package]
name = "system-program-substream"
version = "0.1.1"
edition = "2021"

[lib]
name = "system_program_substream"
crate-type = ["lib", "cdylib"]

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-database-change = "1.0.0"
substreams-solana-utils = { path = "../utils" }
prost = "0.11"
bs58 = "0.5.0"
borsh = { version = "1.5.1", features = ["derive"] }
lazy_static = "1.5.0"
anyhow = "1.0.86"
