[package]
name = "substreams-solana-utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "substreams_solana_utils"

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-program-instructions = "0.1.1"
bs58 = "0.5.0"
regex = "1.10.5"
base64 = "0.22.1"
borsh = { version = "1.5.1", features = ["derive"] }
lazy_static = "1.5.0"
anyhow = "1.0.86"
thiserror = "1.0.63"
